Add company to user card and profile.

--- a/less/modules/usercard.less
+++ b/less/modules/usercard.less
@@ -34,12 +34,11 @@
 		color: white;
 	}
 
-	.usercard-name {
+	.usercard-username {
 		font-size: 28px;
 	}
 
-	.usercard-username {
-		text-transform: uppercase;
+	.usercard-company {
 		font-size: 13px;
 	}
 
