--- a/less/account.less
+++ b/less/account.less
@@ -186,16 +186,16 @@
 	.profile {
 		margin-bottom: 40px;
 
-		.fullname {
-			margin-bottom: 12px;
-			font-size: 32px;
-		}
-
 		.username {
-			text-transform: uppercase;
 			text-align: center;
 			margin-top: 0px;
-			font-size: 15px;
+			font-size: 28px;
+		}
+
+		.company {
+			margin-bottom: 12px;
+			font-size: 20px;
+			text-align: center;
 		}
 
 		.aboutme > p {
