Fix some RTL display issues.

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -46,6 +46,8 @@
 		position: relative;	// for absolutely positioned pseudo-element, below
 		border-left: 2px solid lighten(@brand-primary, 30%);
 		margin-left: 2.5rem;
+		// border-right: 2px solid lighten(@brand-primary, 30%);
+		// margin-right: 2.5rem;
 
 		&:not(:last-child) {
 			padding-bottom: @post-padding;
@@ -56,6 +58,7 @@
 
 		> div:not(.content) {
 			margin-left: -2.5rem;
+			// margin-right: -2.5rem;
 		}
 
 		.avatar, .timeline-badge {
@@ -63,6 +66,7 @@
 			position: relative;
 			z-index: 1;
 			box-shadow: 0 0 0 .5rem @body-bg;
+			// box-shadow: 0 0 .5em 0 @body-bg;
 		}
 	}
 
