Small RTL fix for margin of topic name.

--- a/less/rtl.less
+++ b/less/rtl.less
@@ -70,6 +70,11 @@ html[data-dir="rtl"] {
 			left: 0;
 			right: calc(-.5rem - 1px);
 		}
+		.category-item .icon {
+			margin-right: 0px;
+			margin-left: 5px;
+
+		}
 	}
 
 	.categories .description, .categories .category-children {
