Add some right margin to registration page on mobile.

--- a/less/rtl.less
+++ b/less/rtl.less
@@ -183,4 +183,10 @@ html[data-dir="rtl"] {
 		left: inherit;
 		right: 0;
 	}
+
+	@media (max-width: 1199px) {
+		#panel {
+			padding-left: 20px;
+		}
+	}
 }
