Fix RTL issues in content.

--- a/less/rtl.less
+++ b/less/rtl.less
@@ -84,6 +84,11 @@ html[data-dir="rtl"] {
 			margin-left: 5px;
 
 		}
+		.content {
+			p {
+				direction: rtl;
+			}
+		}
 	}
 
 	.categories .description, .categories .category-children {
